tests/typechecking/invalid/non_unit.ml
(* Retour non Unit *)
let rec f x = x in f 1
